--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,9 @@
+
+pluginManagement {
+    repositories {
+        maven { url 'https://repo.spring.io/snapshot' }
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
 rootProject.name = 'sandbox'
